hphp/test/zend/bad/ext/phar/tests/zip/corrupt_008.php
<?php
try {
	new PharData(dirname(__FILE__) . '/files/compress_unsup1.zip');
} catch (Exception $e) {
	echo $e->getMessage() . "\n";
}
try {
	new PharData(dirname(__FILE__) . '/files/compress_unsup2.zip');
} catch (Exception $e) {
	echo $e->getMessage() . "\n";
}
try {
	new PharData(dirname(__FILE__) . '/files/compress_unsup3.zip');
} catch (Exception $e) {
	echo $e->getMessage() . "\n";
}
try {
	new PharData(dirname(__FILE__) . '/files/compress_unsup4.zip');
} catch (Exception $e) {
	echo $e->getMessage() . "\n";
}
try {
	new PharData(dirname(__FILE__) . '/files/compress_unsup5.zip');
} catch (Exception $e) {
	echo $e->getMessage() . "\n";
}
try {
	new PharData(dirname(__FILE__) . '/files/compress_unsup6.zip');
} catch (Exception $e) {
	echo $e->getMessage() . "\n";
}
try {
	new PharData(dirname(__FILE__) . '/files/compress_unsup7.zip');
} catch (Exception $e) {
	echo $e->getMessage() . "\n";
}
try {
	new PharData(dirname(__FILE__) . '/files/compress_unsup9.zip');
} catch (Exception $e) {
	echo $e->getMessage() . "\n";
}
try {
	new PharData(dirname(__FILE__) . '/files/compress_unsup10.zip');
} catch (Exception $e) {
	echo $e->getMessage() . "\n";
}
try {
	new PharData(dirname(__FILE__) . '/files/compress_unsup14.zip');
} catch (Exception $e) {
	echo $e->getMessage() . "\n";
}
try {
	new PharData(dirname(__FILE__) . '/files/compress_unsup18.zip');
} catch (Exception $e) {
	echo $e->getMessage() . "\n";
}
try {
	new PharData(dirname(__FILE__) . '/files/compress_unsup19.zip');
} catch (Exception $e) {
	echo $e->getMessage() . "\n";
}
try {
	new PharData(dirname(__FILE__) . '/files/compress_unsup97.zip');
} catch (Exception $e) {
	echo $e->getMessage() . "\n";
}
try {
	new PharData(dirname(__FILE__) . '/files/compress_unsup98.zip');
} catch (Exception $e) {
	echo $e->getMessage() . "\n";
}
try {
	new PharData(dirname(__FILE__) . '/files/compress_unsupunknown.zip');
} catch (Exception $e) {
	echo $e->getMessage() . "\n";
}
?>
===DONE===